--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>My Cookbook — Master–Detail (Editable + Auto‑Sync)</title>
+<title>My Cookbook — Master–Detail (Editable + Auto-Sync)</title>
 <style>
   :root{--bg:#0f1115;--panel:#12151c;--card:#171a21;--text:#e9edf1;--muted:#9aa7b6;--accent:#4da3ff;--line:#262b35}
   *{box-sizing:border-box} body{margin:0;font:16px/1.45 system-ui,Segoe UI,Roboto,Helvetica,Arial;background:var(--bg);color:var(--text)}
@@ -54,7 +54,7 @@
   <header>
     <div style="display:flex;align-items:center;gap:10px">
       <h1>My Cookbook</h1>
-      <span class="badge">Sidebar list → Full‑width • Add/Edit • Checklists • Butter→TBSP • Timers • Auto‑Sync</span>
+      <span class="badge">Sidebar list → Full-width • Add/Edit • Checklists • Butter→TBSP • Timers • Auto-Sync</span>
     </div>
     <div class="toolbar">
       <button id="btn-import">Import JSON</button>
@@ -73,7 +73,7 @@
       <div id="list" class="list"></div>
     </aside>
     <section id="detail" class="detail">
-      <div class="empty">Pick a recipe on the left to view it full‑width.</div>
+      <div class="empty">Pick a recipe on the left to view it full-width.</div>
     </section>
   </div>
 </div>
@@ -86,20 +86,14 @@
       <button class="ghost" value="cancel">Close</button>
     </div>
     <div style="padding:16px" class="grid2">
-      <div style="grid-column:1/-1" class="small">Create a GitHub token with <b>gist</b> permission (fine‑grained token is OK). Stored locally on this device.</div>
-      <div>
-        <label class="small">GitHub Token (gist scope)</label>
-        <input id="gh-token" class="grow" placeholder="ghp_…" />
-      </div>
-      <div>
-        <label class="small">Gist ID (optional if creating new)</label>
-        <input id="gh-gist" class="grow" placeholder="e.g. a1b2c3d4…" />
-      </div>
+      <div style="grid-column:1/-1" class="small">Create a GitHub token with <b>gist</b> permission (fine-grained token is OK). Stored locally on this device.</div>
+      <div><label class="small">GitHub Token (gist scope)</label><input id="gh-token" class="grow" placeholder="ghp_…" /></div>
+      <div><label class="small">Gist ID (optional if creating new)</label><input id="gh-gist" class="grow" placeholder="e.g. a1b2c3d4…" /></div>
       <div style="grid-column:1/-1;display:flex;flex-wrap:wrap;gap:8px">
         <button id="btn-gist-create" type="button">Create private gist from current</button>
-        <button id="btn-gist-save" type="button">Save (push) to gist</button>
-        <button id="btn-gist-load" type="button">Load (replace local)</button>
-        <button id="btn-gist-merge" type="button">Merge from gist</button>
+        <button id="btn-gist-save"   type="button">Save (push) to gist</button>
+        <button id="btn-gist-load"   type="button">Load (replace local)</button>
+        <button id="btn-gist-merge"  type="button">Merge from gist</button>
         <button id="btn-sync-signout" type="button">Sign out of sync on this device</button>
       </div>
       <div id="sync-status" class="small" style="grid-column:1/-1;color:#beddff"></div>
@@ -115,30 +109,14 @@
       <button class="ghost" value="cancel">Close</button>
     </div>
     <div style="padding:16px" class="grid2">
-      <div>
-        <label class="small">Title</label>
-        <input id="e-title" class="grow" placeholder="Chocolate Chip Cookies" />
-      </div>
-      <div>
-        <label class="small">Category</label>
-        <input id="e-category" class="grow" placeholder="Breakfast / Lunch / Dinner / Sweets" />
-      </div>
-      <div>
-        <label class="small">Serves</label>
-        <input id="e-serves" class="grow" placeholder="4" />
-      </div>
-      <div>
-        <label class="small">Total time</label>
-        <input id="e-time" class="grow" placeholder="45 min" />
-      </div>
-      <div>
-        <label class="small">Ingredients (one per line)</label>
-        <textarea id="e-ings" rows="8" class="grow" placeholder="1/2 cup butter&#10;2 eggs&#10;1 tsp salt"></textarea>
-      </div>
-      <div>
-        <label class="small">Steps (one per line)</label>
-        <textarea id="e-steps" rows="8" class="grow" placeholder="Preheat oven to 350°F&#10;Stir 3 min until glossy&#10;Bake 10-12 min"></textarea>
-      </div>
+      <div><label class="small">Title</label><input id="e-title" class="grow" placeholder="Chocolate Chip Cookies" /></div>
+      <div><label class="small">Category</label><input id="e-category" class="grow" placeholder="Breakfast / Lunch / Dinner / Sweets" /></div>
+      <div><label class="small">Serves</label><input id="e-serves" class="grow" placeholder="4" /></div>
+      <div><label class="small">Total time</label><input id="e-time" class="grow" placeholder="45 min" /></div>
+      <div><label class="small">Ingredients (one per line)</label>
+        <textarea id="e-ings" rows="8" class="grow" placeholder="1/2 cup butter&#10;2 eggs&#10;1 tsp salt"></textarea></div>
+      <div><label class="small">Steps (one per line)</label>
+        <textarea id="e-steps" rows="8" class="grow" placeholder="Preheat oven to 350°F&#10;Stir 3 min until glossy&#10;Bake 10-12 min"></textarea></div>
       <div style="grid-column:1/-1">
         <label class="small">Quick paste (optional)</label>
         <textarea id="e-paste" rows="6" class="grow" placeholder="Paste any recipe text here; the parser will try to split into Ingredients and Steps."></textarea>
@@ -152,7 +130,11 @@
 </dialog>
 
 <script>
-// ====== State & utils ======
+/* ==== Config for auto-load from GitHub ==== */
+const GITHUB_JSON_URL =
+  "https://raw.githubusercontent.com/jeanfuemmeler-jf/cookbook/main/recipes.json";
+
+/* ====== State & utils ====== */
 const DEFAULT_CATEGORIES=["Breakfast","Lunch","Dinner","Sweets"];
 const byId=id=>document.getElementById(id);
 const $tabs=byId('tabs'),$list=byId('list'),$detail=byId('detail'),$editor=byId('editor');
@@ -160,7 +142,7 @@ let RECIPES=JSON.parse(localStorage.getItem('cookbook.recipes')||'[]');
 let TAB=localStorage.getItem('cookbook.tab')||'Dinner';
 let SELECTED=localStorage.getItem('cookbook.sel')||'';
 let EDITING_ID=null; // null = adding; string = editing existing id
-// sync settings
+// sync settings (optional Gist)
 let GH_TOKEN = localStorage.getItem('cookbook.gh.token') || '';
 let GH_GIST  = localStorage.getItem('cookbook.gh.gist')  || '';
 
@@ -175,7 +157,7 @@ function butterBadge(line){const s=String(line).toLowerCase(); if(!/\bbutter\b/.
 function parseStirSeconds(text){const m=String(text).toLowerCase().match(/stir[^\d]*(\d+(?:\.\d+)?)\s*(min|mins|minutes|sec|secs|seconds)\b/); if(!m)return 0; const val=parseFloat(m[1]); const unit=m[2]; return /min/.test(unit)?Math.round(val*60):Math.round(val)}
 function mmss(s){const m=Math.floor(s/60),sec=s%60; return `${m}:${String(sec).padStart(2,'0')}`}
 
-// ====== Renderers ======
+/* ====== Renderers ====== */
 function renderTabs(){
   const cats=[...new Set([...DEFAULT_CATEGORIES,...RECIPES.map(r=>norm(r.category))])].filter(Boolean);
   $tabs.innerHTML=cats.map(c=>`<div class="tab ${sameCat(TAB,c)?'active':''}" data-tab="${c}">${c}</div>`).join('');
@@ -189,7 +171,7 @@ function renderList(){
   $list.innerHTML=list.map(r=>`<div class="item ${SELECTED===r.id?'active':''}" data-id="${r.id}"><div><div class="title">${escapeHtml(r.title)}</div><div class="meta">${escapeHtml(r.serves||'')}${r.serves&&r.time?' · ':''}${escapeHtml(r.time||'')}</div></div></div>`).join('');
 }
 function renderDetail(){
-  if(!SELECTED){$detail.innerHTML='<div class="empty">Pick a recipe on the left to view it full‑width.</div>';return;}
+  if(!SELECTED){$detail.innerHTML='<div class="empty">Pick a recipe on the left to view it full-width.</div>';return;}
   const r=RECIPES.find(x=>x.id===SELECTED);
   if(!r){$detail.innerHTML='<div class="empty">Recipe not found.</div>';return;}
   const ings=(r.ingredients||[]).map((line,i)=>`${checkboxLine('ing',i,line)} ${butterBadge(line)}`).join('');
@@ -219,7 +201,7 @@ function renderDetail(){
   byId('btn-del').addEventListener('click',async()=>{ RECIPES=RECIPES.filter(x=>x.id!==r.id); persist(); SELECTED=''; localStorage.setItem('cookbook.sel', SELECTED); renderTabs(); renderList(); renderDetail(); await autoPush(); });
   // edit
   byId('btn-edit').addEventListener('click',()=>openEditor(r));
-  // clear all checkboxes for this recipe
+  // clear all checkboxes
   const clearBtn = byId('btn-clear');
   if (clearBtn) {
     clearBtn.addEventListener('click', () => {
@@ -241,7 +223,7 @@ function checkboxLine(kind, i, text){
 }
 function escapeHtml(s){return String(s).replace(/[&<>"']/g, m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m]))}
 
-// ====== Editor (Add/Edit) ======
+/* ====== Editor (Add/Edit) ====== */
 function openEditor(recipe){
   EDITING_ID = recipe? recipe.id : null;
   byId('editor-title').textContent = EDITING_ID ? 'Edit recipe' : 'Add a recipe';
@@ -266,11 +248,8 @@ async function saveRecipe(){
     steps: byId('e-steps').value.split(/\r?\n/).map(s=>s.trim()).filter(Boolean),
     updatedAt: now
   };
-  if(EDITING_ID){
-    RECIPES = RECIPES.map(r => r.id===EDITING_ID ? data : r);
-  } else {
-    RECIPES = [data, ...RECIPES];
-  }
+  if(EDITING_ID){ RECIPES = RECIPES.map(r => r.id===EDITING_ID ? data : r); }
+  else { RECIPES = [data, ...RECIPES]; }
   persist();
   TAB = data.category; localStorage.setItem('cookbook.tab', TAB);
   SELECTED = data.id; localStorage.setItem('cookbook.sel', SELECTED);
@@ -293,14 +272,14 @@ function tryParse(){
   byId('e-steps').value = steps.join('\n');
 }
 
-// ====== Persistence ======
+/* ====== Persistence ====== */
 function persist(){ localStorage.setItem('cookbook.recipes', JSON.stringify(RECIPES)); }
 
-// ====== Import/Export ======
+/* ====== Import/Export ====== */
 byId('btn-import').addEventListener('click',()=>{ const txt=prompt('Paste JSON exported from here'); if(!txt) return; try{ const arr=JSON.parse(txt); if(Array.isArray(arr)){ RECIPES=arr; persist(); SELECTED=''; localStorage.setItem('cookbook.sel', SELECTED); renderTabs(); renderList(); renderDetail(); } } catch{ alert("Couldn't parse JSON"); } });
 byId('btn-export').addEventListener('click',()=>{ const out=JSON.stringify(RECIPES,null,2); const blob=new Blob([out],{type:'application/json'}); const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='recipes.json'; a.click(); URL.revokeObjectURL(url); });
 
-// ====== Sync helpers (GitHub Gist) ======
+/* ====== Optional: Gist sync helpers ====== */
 function note(msg){ byId('sync-status').textContent = msg; }
 function saveSyncFields(){ GH_TOKEN = byId('gh-token').value.trim(); GH_GIST = byId('gh-gist').value.trim(); localStorage.setItem('cookbook.gh.token', GH_TOKEN); localStorage.setItem('cookbook.gh.gist', GH_GIST); }
 async function ensureToken(){ saveSyncFields(); if(!GH_TOKEN){ note('Please enter a GitHub token with gist permission.'); throw new Error('no token'); } }
@@ -314,22 +293,10 @@ function mergeArraysByNewest(localArr, remoteArr){
   localArr.forEach(put); remoteArr.forEach(put);
   return Array.from(map.values());
 }
-async function autoPush(){
-  if(!GH_TOKEN) return; // not configured
-  const ok = await gistSave();
-  if(!ok){ /* non-blocking */ }
-}
-async function autoPullMerge(){
-  if(!GH_TOKEN || !GH_GIST) return;
-  const remote = await gistLoad();
-  if(remote && Array.isArray(remote)){
-    RECIPES = mergeArraysByNewest(RECIPES, remote);
-    persist();
-    renderTabs(); renderList(); renderDetail();
-  }
-}
+async function autoPush(){ if(!GH_TOKEN) return; const ok = await gistSave(); if(!ok){ /* noop */ } }
+async function autoPullMerge(){ if(!GH_TOKEN || !GH_GIST) return; const remote = await gistLoad(); if(remote && Array.isArray(remote)){ RECIPES = mergeArraysByNewest(RECIPES, remote); persist(); renderTabs(); renderList(); renderDetail(); } }
 
-// ====== Events ======
+/* ====== Events ====== */
 $tabs.addEventListener('click',e=>{ const t=e.target.closest('.tab'); if(!t) return; TAB=t.dataset.tab; localStorage.setItem('cookbook.tab',TAB); SELECTED=''; localStorage.setItem('cookbook.sel',SELECTED); renderTabs(); renderList(); renderDetail(); });
 byId('catSelect').addEventListener('change',e=>{ TAB=e.target.value; localStorage.setItem('cookbook.tab',TAB); SELECTED=''; localStorage.setItem('cookbook.sel',SELECTED); renderTabs(); renderList(); renderDetail(); });
 $list.addEventListener('click',e=>{ const it=e.target.closest('.item'); if(!it) return; SELECTED=it.dataset.id; localStorage.setItem('cookbook.sel',SELECTED); renderList(); renderDetail(); });
@@ -347,32 +314,34 @@ byId('btn-gist-load').addEventListener('click',async()=>{ try{ await ensureToken
 byId('btn-gist-merge').addEventListener('click',async()=>{ try{ await ensureToken(); const data = await gistLoad(); if(!data){ return note('Could not load from gist.'); } RECIPES = mergeArraysByNewest(RECIPES, data); persist(); renderTabs(); renderList(); renderDetail(); note('Merged gist → local (kept newest per recipe).'); }catch{} });
 byId('btn-sync-signout').addEventListener('click',()=>{ localStorage.removeItem('cookbook.gh.token'); localStorage.removeItem('cookbook.gh.gist'); GH_TOKEN=''; GH_GIST=''; byId('gh-token').value=''; byId('gh-gist').value=''; note('This device is signed out of sync.'); });
 
-// ====== Init ======
+/* ====== Init ====== */
 renderTabs(); renderList(); renderDetail();
-// Try auto‑pull/merge on load (non‑blocking)
+// Optional: auto-pull/merge from Gist (if configured)
 autoPullMerge();
-</script>
-  <script>
-// Try to load recipes.json automatically from GitHub repo
+
+/* ====== Always fetch the latest recipes.json from GitHub on load ====== */
 async function loadRecipesFromGitHub() {
   try {
-    const response = await fetch("https://raw.githubusercontent.com/jeanfuemmeler-jf/cookbook/main/recipes.json");
-    if (response.ok) {
-      const data = await response.json();
-      localStorage.setItem("RECIPES", JSON.stringify(data));
-      location.reload(); // refresh so recipes appear
+    const url = GITHUB_JSON_URL + "?ts=" + Date.now(); // cache-buster
+    const res = await fetch(url, { cache: "no-store" });
+    if (!res.ok) return;
+    const data = await res.json();
+    if (Array.isArray(data)) {
+      RECIPES = data;
+      persist();
+      // if nothing selected, pick first in current tab
+      if (!SELECTED && RECIPES.length) {
+        const first = RECIPES.find(r=>sameCat(r.category,TAB)) || RECIPES[0];
+        if (first) { SELECTED = first.id; localStorage.setItem('cookbook.sel', SELECTED); }
+      }
+      renderTabs(); renderList(); renderDetail();
     }
-  } catch (err) {
-    console.error("Could not load recipes.json from GitHub:", err);
+  } catch (e) {
+    console.warn("GitHub recipes.json fetch failed (using local data).", e);
   }
 }
-
-// Run on first visit (only if no recipes in localStorage yet)
-if (!localStorage.getItem("RECIPES")) {
-  loadRecipesFromGitHub();
-}
+loadRecipesFromGitHub(); // <- always refresh from GitHub
 </script>
-
 </body>
 </html>
 
